// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad region 1`] = `
{
  "region": {
    "id": {
      "key": "yup:string.uuid",
      "options": {
        "path": "region.id",
      },
    },
  },
}
`;

exports[`should be invalid for bad uuid 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`should be invalid for empty alt names 1`] = `
{
  "altNames": [
    "yup:mixed.required",
  ],
}
`;

exports[`should be invalid for empty name 1`] = `
{
  "name": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;
